--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
 annotated-types==0.7.0
+anthropic==0.42.0
 anyio==4.7.0
 async-timeout==4.0.3
 attrs==24.3.0
@@ -11,6 +12,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 dataclasses-json==0.6.7
+defusedxml==0.7.1
 distro==1.9.0
 exceptiongroup==1.2.2
 frozenlist==1.5.0
@@ -24,6 +26,7 @@ jiter==0.8.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.13
+langchain-anthropic==0.3.1
 langchain-community==0.3.13
 langchain-core==0.3.28
 langchain-ollama==0.2.2
@@ -39,6 +42,7 @@ openai==1.58.1
 orjson==3.10.13
 packaging==24.2
 pathspec==0.12.1
+pip @ file:///C:/b/abs_9btgg364vx/croot/pip_1723485053292/work
 platformdirs==4.3.6
 propcache==0.2.1
 pydantic==2.10.4
